parser/src/parser/expressions/snapshots/parser__parser__expressions__for_expr__tests__parse_for_expr.snap
---
source: parser/src/parser/expressions/for_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 165)
  WHITESPACE@[0; 21) "\n                    "
  FN_DEF@[21; 165)
    FN_KW@[21; 23) "fn"
    WHITESPACE@[23; 24) " "
    NAME@[24; 28)
      IDENT@[24; 28) "main"
    PARAM_LIST@[28; 30)
      L_PAREN@[28; 29) "("
      R_PAREN@[29; 30) ")"
    WHITESPACE@[30; 31) " "
    BLOCK_EXPR@[31; 165)
      BLOCK@[31; 165)
        L_CURLY@[31; 32) "{"
        WHITESPACE@[32; 57) "\n                     ..."
        EXPR_STMT@[57; 163)
          FOR_EXPR@[57; 163)
            FOR_KW@[57; 60) "for"
            L_PAREN@[60; 61) "("
            LET_STMT@[61; 71)
              LET_KW@[61; 64) "let"
              WHITESPACE@[64; 65) " "
              BIND_PAT@[65; 66)
                NAME@[65; 66)
                  IDENT@[65; 66) "x"
              WHITESPACE@[66; 67) " "
              EQ@[67; 68) "="
              WHITESPACE@[68; 69) " "
              LITERAL@[69; 71)
                INT_NUMBER@[69; 71) "10"
            SEMI@[71; 72) ";"
            WHITESPACE@[72; 73) " "
            BIN_EXPR@[73; 78)
              IDENT_EXPR@[73; 74)
                NAME@[73; 74)
                  IDENT@[73; 74) "x"
              L_ANGLE@[74; 75) "<"
              WHITESPACE@[75; 76) " "
              LITERAL@[76; 78)
                INT_NUMBER@[76; 78) "10"
            SEMI@[78; 79) ";"
            WHITESPACE@[79; 80) " "
            BIN_EXPR@[80; 85)
              IDENT_EXPR@[80; 81)
                NAME@[80; 81)
                  IDENT@[80; 81) "x"
              EQ@[81; 82) "="
              BIN_EXPR@[82; 85)
                IDENT_EXPR@[82; 83)
                  NAME@[82; 83)
                    IDENT@[82; 83) "x"
                PLUS@[83; 84) "+"
                LITERAL@[84; 85)
                  INT_NUMBER@[84; 85) "1"
            R_PAREN@[85; 86) ")"
            WHITESPACE@[86; 87) " "
            BLOCK_EXPR@[87; 163)
              BLOCK@[87; 163)
                L_CURLY@[87; 88) "{"
                WHITESPACE@[88; 117) "\n                     ..."
                EXPR_STMT@[117; 162)
                  CALL_EXPR@[117; 137)
                    IDENT_EXPR@[117; 124)
                      NAME@[117; 124)
                        IDENT@[117; 124) "println"
                    ARG_LIST@[124; 137)
                      L_PAREN@[124; 125) "("
                      LITERAL@[125; 136)
                        STRING@[125; 136) "\"it works \""
                      R_PAREN@[136; 137) ")"
                  WHITESPACE@[137; 162) "\n                     ..."
                R_CURLY@[162; 163) "}"
        SEMI@[163; 164) ";"
        R_CURLY@[164; 165) "}"

