parser/src/parser/expressions/snapshots/parser__parser__expressions__for_expr__tests__parse_for_no_init.snap
---
source: parser/src/parser/expressions/for_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 33)
  FN_DEF@[0; 33)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 33)
      BLOCK@[10; 33)
        L_CURLY@[10; 11) "{"
        WHITESPACE@[11; 12) " "
        EXPR_STMT@[12; 31)
          FOR_EXPR@[12; 31)
            FOR_KW@[12; 15) "for"
            WHITESPACE@[15; 16) " "
            L_PAREN@[16; 17) "("
            SEMI@[17; 18) ";"
            BIN_EXPR@[18; 22)
              IDENT_EXPR@[18; 19)
                NAME@[18; 19)
                  IDENT@[18; 19) "x"
              L_ANGLE@[19; 20) "<"
              LITERAL@[20; 22)
                INT_NUMBER@[20; 22) "10"
            SEMI@[22; 23) ";"
            BIN_EXPR@[23; 28)
              IDENT_EXPR@[23; 24)
                NAME@[23; 24)
                  IDENT@[23; 24) "x"
              PLUSEQ@[24; 26) "+="
              LITERAL@[26; 28)
                INT_NUMBER@[26; 28) "10"
            R_PAREN@[28; 29) ")"
            BLOCK_EXPR@[29; 31)
              BLOCK@[29; 31)
                L_CURLY@[29; 30) "{"
                R_CURLY@[30; 31) "}"
        SEMI@[31; 32) ";"
        R_CURLY@[32; 33) "}"

